[package]
name = "nsen"
version = "0.1.0"
edition = "2024"

[dependencies]
tar = "0.4.44"
tokio = { version = "1", features = ["full"] }
zstd = { version = "0.13.3", features = ["zstdmt"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
rpassword = "7.3"
openssl = "0.10"
local-ip-address = "0.6"
num_cpus = "1.16"
indicatif = "0.17"
walkdir = "2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
